classDiagram
    class ImageProvider {
      <<interface>>
      +generate(request) Promise~ImageGenerationResult~
    }
    class AgnesProvider {
      -config
      -httpClient
      +generate(request) Promise~ImageGenerationResult~
    }
    class ImageService {
      -provider
      -limiter
      -retryPolicy
      +generate(request)
    }
    class BatchService {
      +generateBatch(items)
      +downloadAndValidate(image)
    }
    class DownloadService {
      +download(url, outputPath)
    }
    class ValidationService {
      +validate(path)
    }
    class RateLimiter {
      +acquire(size)
    }
    class RetryPolicy {
      +execute(operation)
    }
    ImageProvider <|.. AgnesProvider
    ImageService --> ImageProvider
    ImageService --> RateLimiter
    ImageService --> RetryPolicy
    BatchService --> ImageService
    BatchService --> DownloadService
    DownloadService --> ValidationService
